--- a/src/_view/_html/V_Main.html
+++ b/src/_view/_html/V_Main.html
@@ -41,7 +41,15 @@
 
                     <!-- Barra de Operações -->
                     <div id="operation-bar">
-
+                        <div id="btn-create">
+                            <img src="../_img/plus-16x16.png"/>
+                        </div>
+                        <div id="btn-delete">
+                            <img src="../_img/minus-16x16.png"/>
+                        </div>
+                        <div id="btn-open">
+                            <img src="../_img/box-20x20.png"/>
+                        </div>
                     </div>
                 </div>
 
@@ -71,7 +79,11 @@
 
                     <!-- Barra de Status -->
                     <div id="status-bar">
-
+                        <div id="view-graphic">
+                            <img src="../_img/view-graphic-25x25.png"/>
+                        </div>
+                        <div id="line-count">Line: 75</div>
+                        <div id="column-count">Column: 54</div> 
                     </div>
                 </div>
 
