--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -90,4 +90,7 @@
             </div>
         </div>
     </body>
+
+    <!-- Scripts do Controller -->
+    <script src="../../_controller/C_MainWindow.js"></script>
 </html>
