--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Moodance IDE</title>
-        <link rel="stylesheet" href="../_css/V_Main.css"/>
+        <link rel="stylesheet" href="../_css/V_MainWindow.css"/>
     </head>
 
     <!-- Componentes Gráficos -->
