--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -41,8 +41,11 @@
 
                     <!-- Barra de Operações -->
                     <div id="operation-bar">
-                        <div id="btn-create">
-                            <img src="../_img/plus-16x16.png"/>
+                        <div id="btn-create-doc">
+                            <img src="../_img/plus-doc-32x16.png"/>
+                        </div>
+						<div id="btn-create-dir">
+                            <img src="../_img/plus-dir-32x16.png"/>
                         </div>
                         <div id="btn-delete">
                             <img src="../_img/minus-16x16.png"/>
