--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -32,12 +32,10 @@
                 <!-- Painel de Sistema de Pastas -->
                 <div id="folder-panel">
                     <!-- Pasta raiz -->
-                    <h2 id="root-folder">pasta_raiz</h2>
+                    <h2 id="root-folder">Open a folder</h2>
 
                     <!-- Árvore de Arquivos -->
-                    <div id="folder-tree">
-                        
-                    </div>
+                    <div id="folder-tree"></div>
 
                     <!-- Barra de Operações -->
                     <div id="operation-bar">
