--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -39,7 +39,7 @@
 
                     <!-- Barra de Operações -->
                     <div id="operation-bar">
-                        <div id="btn-create-doc">
+                        <div id="btn-create-file">
                             <img src="../_img/plus-doc-32x16.png"/>
                         </div>
 						<div id="btn-create-dir">
