--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -35,7 +35,7 @@
                     <h2 id="root-folder">Open a folder</h2>
 
                     <!-- Árvore de Arquivos -->
-                    <div id="folder-tree"></div>
+                    <div id="folder-tree" tabindex="0"></div>
 
                     <!-- Barra de Operações -->
                     <div id="operation-bar">
