--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -39,18 +39,18 @@
 
                     <!-- Barra de Operações -->
                     <div id="operation-bar">
-                        <div id="btn-create-file">
+                        <button id="btn-create-file" disabled="true">
                             <img src="../_img/plus-doc-32x16.png"/>
-                        </div>
-						<div id="btn-create-dir">
+                        </button>
+						<button id="btn-create-dir" disabled="true">
                             <img src="../_img/plus-dir-32x16.png"/>
-                        </div>
-                        <div id="btn-delete">
+                        </button>
+                        <button id="btn-delete" disabled="true">
                             <img src="../_img/minus-16x16.png"/>
-                        </div>
-                        <div id="btn-open">
+                        </button>
+                        <button id="btn-open">
                             <img src="../_img/box-20x20.png"/>
-                        </div>
+                        </button>
                     </div>
                 </div>
 
