--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -57,21 +57,7 @@
                 <!-- Painel de Edição -->
                 <div id="editor-panel">
                     <!-- Abas de Arquivos -->
-                    <div id="tabs">
-                        <div class="tab selected">
-                            Document_num1_revised.moge
-                            <i class="x"></i>
-                        </div>
-                        <div class="tab">
-                            Document_num2_revised.moge
-                            <i class="x"></i>
-                        </div>
-                        <div class="tab">
-                            Document_dontread_revised.moge
-                            <i class="x"></i>
-                        </div>
-                       
-                    </div>
+                    <div id="tabs"></div>
 
                     <!-- Editor Embutido (Ace Editor) -->
                     <div id="ace-container">
@@ -92,6 +78,7 @@
         </div>
     </body>
 
-    <!-- Scripts do Controller -->
+    <!-- Scripts -->
+    <script src="../../_model/ace/ace.js"></script>
     <script src="../../_controller/C_MainWindow.js"></script>
 </html>
