--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -69,8 +69,8 @@
                         <div id="view-graphic">
                             <img src="../_img/view-graphic-25x25.png"/>
                         </div>
-                        <div id="line-count">Line: 75</div>
-                        <div id="column-count">Column: 54</div> 
+                        <div id="line-count">Row: 0</div>
+                        <div id="column-count">Col: 0</div> 
                     </div>
                 </div>
 
