--- a/src/_view/_html/V_MainWindow.html
+++ b/src/_view/_html/V_MainWindow.html
@@ -39,16 +39,16 @@
 
                     <!-- Barra de Operações -->
                     <div id="operation-bar">
-                        <button id="btn-create-file" disabled="true">
+                        <button id="btn-create-file" class="btn" disabled="true">
                             <img src="../_img/plus-doc-32x16.png"/>
                         </button>
-						<button id="btn-create-dir" disabled="true">
+						<button id="btn-create-dir" class="btn" disabled="true">
                             <img src="../_img/plus-dir-32x16.png"/>
                         </button>
-                        <button id="btn-delete" disabled="true">
+                        <button id="btn-delete" class="btn" disabled="true">
                             <img src="../_img/minus-16x16.png"/>
                         </button>
-                        <button id="btn-open">
+                        <button id="btn-open" class="btn">
                             <img src="../_img/box-20x20.png"/>
                         </button>
                     </div>
@@ -66,9 +66,9 @@
 
                     <!-- Barra de Status -->
                     <div id="status-bar">
-                        <div id="view-graphic">
+                        <button id="view-graphic" class="btn" disabled="true">
                             <img src="../_img/view-graphic-25x25.png"/>
-                        </div>
+                        </button>
                         <div id="line-count">Row: 0</div>
                         <div id="column-count">Col: 0</div> 
                     </div>
